--- a/src/WMS_Main.form
+++ b/src/WMS_Main.form
@@ -3,10 +3,15 @@
   <grid id="27dc6" binding="WMS_MainWindow" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="1920" height="1080"/>
     </constraints>
-    <properties/>
-    <border type="none"/>
+    <properties>
+      <preferredSize width="1920" height="1080"/>
+    </properties>
+    <border type="none" title="WMS Main Window" title-justification="1" title-position="1">
+      <font/>
+      <title-color color="-4473925"/>
+    </border>
     <children/>
   </grid>
 </form>
