--- a/src/WMS_Main.form
+++ b/src/WMS_Main.form
@@ -56,6 +56,14 @@
           <text value="Add Plant"/>
         </properties>
       </component>
+      <component id="892a6" class="javax.swing.JTable" binding="workersTable" custom-create="true">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="50"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
     </children>
   </grid>
 </form>
