--- a/src/WMS_Main.form
+++ b/src/WMS_Main.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="WMS_Main">
-  <grid id="27dc6" binding="WMS_MainWindow" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="WMS_MainWindow" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="1280" height="720"/>
@@ -63,6 +63,46 @@
           </grid>
         </constraints>
         <properties/>
+      </component>
+      <component id="16ee3" class="javax.swing.JButton" binding="addDepartmentBtn">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Add Department"/>
+        </properties>
+      </component>
+      <component id="e14b7" class="javax.swing.JButton" binding="deletePlantBtn">
+        <constraints>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Delete Plant"/>
+        </properties>
+      </component>
+      <component id="7026d" class="javax.swing.JButton" binding="deleteDepartmentBtn">
+        <constraints>
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Delete Department"/>
+        </properties>
+      </component>
+      <component id="245b" class="javax.swing.JButton" binding="addWorkerBtn">
+        <constraints>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Add Worker "/>
+        </properties>
+      </component>
+      <component id="d38c9" class="javax.swing.JButton" binding="deleteWorkerBtn">
+        <constraints>
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Delete Worker"/>
+        </properties>
       </component>
     </children>
   </grid>
