--- a/src/LoginForm.form
+++ b/src/LoginForm.form
@@ -16,7 +16,7 @@
           <text value="ID:"/>
         </properties>
       </component>
-      <component id="8331d" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+      <component id="8331d" class="javax.swing.JTextField" binding="idTb">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="80" height="-1"/>
@@ -38,12 +38,12 @@
           </grid>
         </constraints>
       </hspacer>
-      <component id="a822c" class="javax.swing.JButton" binding="button1" default-binding="true">
+      <component id="a822c" class="javax.swing.JButton" binding="idOkBtn">
         <constraints>
           <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Button"/>
+          <text value="Ok"/>
         </properties>
       </component>
       <vspacer id="9f019">
