--- a/src/WMS_AddDepartment.form
+++ b/src/WMS_AddDepartment.form
@@ -37,7 +37,7 @@
           <text value="Maximum workers"/>
         </properties>
       </component>
-      <component id="9ac6e" class="javax.swing.JTextField" binding="maxWrokersTb">
+      <component id="9ac6e" class="javax.swing.JTextField" binding="maxWorkersTb">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
