--- a/src/WMS_AddWorker.form
+++ b/src/WMS_AddWorker.form
@@ -64,14 +64,6 @@
           <text value="Department ID:"/>
         </properties>
       </component>
-      <component id="368f5" class="javax.swing.JLabel" binding="isLeaderLbl">
-        <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Position:"/>
-        </properties>
-      </component>
       <component id="a1b35" class="javax.swing.JLabel" binding="mobileLbl">
         <constraints>
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -164,7 +156,7 @@
           <text value="Add Worker"/>
         </properties>
       </component>
-      <component id="cc0c0" class="javax.swing.JCheckBox" binding="leaderCb">
+      <component id="514f7" class="javax.swing.JCheckBox" binding="leaderCb">
         <constraints>
           <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
